objects/ssot__PersonSkill__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Person Skill Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonId__c</fullName>
        <label>Person</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonObject__c</fullName>
        <label>Person Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonSkillProficiencyLevel__c</fullName>
        <label>Person Skill Proficiency Level</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonSkillVerificationStatus__c</fullName>
        <label>Person Skill Verification Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonSkill_PersonId_map_Account_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PersonSkill_PersonId_map_Account_Id_N_1</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>PersonSkill_PersonId_map_Account_Id_N_1</relationshipLabel>
        <relationshipName>PersonSkill_PersonId_map_Account_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__PersonSkill_PersonId_map_Employee_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PersonSkill_PersonId_map_Employee_Id_N_1</label>
        <referenceTo>ssot__Employee__dlm</referenceTo>
        <relationshipLabel>PersonSkill_PersonId_map_Employee_Id_N_1</relationshipLabel>
        <relationshipName>PersonSkill_PersonId_map_Employee_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__PersonSkill_SkillId_map_Skill_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PersonSkill_SkillId_map_Skill_Id_N_1</label>
        <referenceTo>ssot__Skill__dlm</referenceTo>
        <relationshipLabel>PersonSkill_SkillId_map_Skill_Id_N_1</relationshipLabel>
        <relationshipName>PersonSkill_SkillId_map_Skill_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__SkillId__c</fullName>
        <label>Skill</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VerificationDate__c</fullName>
        <label>Verification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__VerificationSummary__c</fullName>
        <label>Verification Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1741334819773_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PersonSkill_PersonId_map_AccountCont_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>PersonSkill_PersonId_map_AccountCont_rel</relationshipLabel>
        <relationshipName>rel_1741334819773_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>